Update intellij memory settings